[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Ship@2x.png" type="Texture" id=4]
[ext_resource path="res://scripts/enemy_health_bar.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50.9213, 15.8632 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.87451, 0.121569, 0.121569, 1 )
border_color = Color( 1, 0.0156863, 0.0156863, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Enemy" type="Area2D"]
position = Vector2( 178.131, 108.489 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 2 )
explosion = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.756863, 0.0470588, 0.0470588, 1 )
rotation = 3.14159
scale = Vector2( 1.7, 2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11.49 )
shape = SubResource( 1 )

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 0, 54.48 )

[node name="bullet_container" type="Node" parent="."]

[node name="gun_timer" type="Timer" parent="."]
one_shot = true

[node name="movement_timer" type="Timer" parent="."]
one_shot = true

[node name="health_bar" type="ProgressBar" parent="."]
show_behind_parent = true
margin_left = -59.8552
margin_top = -61.8818
margin_right = 60.1448
margin_bottom = -47.8818
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 87.1
script = ExtResource( 5 )

[node name="death_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
